<resources>
    <string name="app_name">BesTi</string>
    <string name="logosplash">Logo</string>
    <string name="title_intro_1">Buang Sampah Pada Tempatnya</string>
    <string name="title_intro_2">Pilah Sampah Sesuai Jenisnya</string>
    <string name="title_intro_3">Ketahui Sampah yang dapat di daur ulang</string>
    <string name="title_intro_4">Bumi pun Terselamatkan!</string>
    <string name="desc_intro_1">Apabila sampah dibuang tidak pada tempatnya atau sembarangan, sampah-sampah ini akan merusak pemandangan dan mengotori lingkungan tempat tinggal.</string>
    <string name="desc_intro_2">Pilah sampah berdasarkan jenisnya, organik atau anorganik, untuk memudahkan pengolahannya.</string>
    <string name="desc_intro_3">Bahan seperti sampah plastik, botol, dan kertas merupakan bahan daur ulang terbaik yang bisa digunakan. Limbah ini tidak dapat diuraikan oleh bakteri dan karenanya tidak dapat dimusnahkan di dalam tanah.</string>
    <string name="desc_intro_4">Dengan mendaur ulang sampah yang susah terurai, hal ini dapat membantu kita menyelamatkan bumi.</string>
    <string name="start_now">Ayo Mulai</string>
    <string name="imageView">Image View</string>
    <string name="title_login_page">BesTi (Bebas Sampah Setiap Hari!)</string>
    <string name="message_login_page">Masukkan dulu datamu ya!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="copyright">\@ 2022 BesTi</string>
    <string name="login">Masuk</string>
    <string name="daftar">Daftar disini</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="name">Name</string>
    <string name="signup">Daftar</string>
    <string name="phone">No. Hp</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="profession">Profesi</string>
    <string name="username">Username</string>
    <string name="Photo">Foto</string>
    <string name="Education">Edukasi</string>
    <string name="Selengkapnya">Selengkapnya</string>
    <string name="Gusti">Gusti</string>
    <string name="id">1721000001</string>
    <string name="BeritaTerbaru">Berita Terbaru</string>
    <string name="btn_selesai">Selesai</string>
    <string name="dummy_point">+5</string>
    <string name="point">Point Diperoleh:</string>
    <string name="dummy_category">Anorganik</string>
    <string name="category">Jenis Sampah :</string>
    <string name="dummy_result">Plastik</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keluar">Keluar</string>
    <string name="setting">Setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dummy_points">100pts</string>
    <string name="points">Points</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="tv_help">Butuh Bantuan?</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="ganti_tema">Ganti Tema</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="save">Simpan</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="judul_saran">Judul saran</string>
    <string name="buat_sendiri_yuk">Buat Sendiri Yuk!!</string>
    <string name="hasil_deteksi">Hasil Deteksi</string>
    <string name="dummy_accuracy">97%</string>
    <string name="feedback">Feedback</string>
    <string name="change">Ubah</string>
    <string name="update">Update</string>
    <string name="kirim">Kirim</string>
    <string name="add">Tambah</string>
    <string name="empty">Field can not be blank</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="date">Date</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="yes">Ya</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="no">Tidak</string>
    <string name="title">Judul</string>
    <string name="write_your_review_here">Write your review here...</string>
    <string name="review">Review</string>
    <string name="send">Kirim</string>
    <string name="capture">Capture</string>
    <string name="switchC">Switch Camera</string>
    <string name="PhotoNews">Photo News</string>
    <string name="photodeteksi">"Photo Deteksi "</string>
    <string name="akun">Belum Punya Akun?</string>
    <string-array name="saran_organik">
        <item>Kompos</item>
        <item>Tambahan Pakan Ternak </item>
    </string-array>
    <string-array name="desc_organik">
        <item>Kompos merupakan salah satu jenis pupuk organik yang sudah ada sejak lama.
            Pengertian kompos adalah bahan-bahan organik yang sudah mengalami proses pelapukan karena terjadi interaksi antara mikroorganisme atau bakteri pembusuk yang bekerja di dalam bahan organik tersebut.\n
            Bahan organik yang dimaksud pada pengertian kompos adalah rumput, jerami, sisa ranting dan dahan, kotoran hewan, bunga yang rontok, air kencing hewan ternak, serta bahan organik lainnya.
            Semua bahan organik tersebut akan mengalami pelapukan yang diakibatkan oleh mikroorganisme yang tumbuh subur pada lingkungan lembap dan basah.\n
            \n
            Beberapa sampah organik yang dapat diubah menjadi pupuk kompos ini di antaranya ialah:\n
            - Sampah sisa makanan mulai dari sayur-sayuran hingga daging busuk\n
            - Kertas bekas maupun tisu yang sudah tak terpakai lagi;\n
            - Dedaunan serta rumput;\n
            - Potongan kayu;\n
            - Bumbu dapur kadaluarsa;\n
            - Bulu hewan yang rontok;\n
            - Debu dari belakang lemari es;\n
            - Hingga kotoran hewan peliharaan.\n
            \n
            Ketika memutuskan untuk membuat pupuk kompos, tentu kita membutuhkan alat dan bahan yang tepat.\n
            Alat Membuat Pupuk Kompos:\n
            - Wadah berukuran besar dengan penutup (tong atau ember)\n
            - Sarung tangan\n
            \n
            Bahan Membuat Pupuk Kompos\n
            - Sampah rumah tangga (bisa sisa makanan atau bekas sayuran)\n
            - Tanah\n
            - Air secukupnya\n
            - Arang sekam\n
            - kapur\n
            - Cairan pupuk EM4 sebagai tambahan\n
            \n
            Langkah Membuat Pupuk Kompos\n
            - Siapkan sampah rumah tangga yang akan diolah menjadi pupuk kompos.\n
            - Pisahkan sampah organik (sisa makanan/dedaunan) dengan sampah plastik. Sampah organiklah yang nantinya akan digunakan sebagai pupuk kompos.\n
            - Siapkan wadah berukuran besar untuk membuat pupuk kompos. Jangan lupa bahwa wadah harus dilengkapi dengan penutup agar pupuk yang dibuat tidak akan terkontaminasi.\n
            - Masukkan tanah secukupnya ke dalam wadah yang telah diisi dengan sampah organik. Ketebalannya bisa kamu sesuaikan dengan wadah dan banyaknya sampah organik.\n
            - Siram permukaan tanah tersebut menggunakan air secukupnya.\n
            - Masukkan sampah organik yang telah dicampur arang sekam(optional) dan kapur pertanian ke dalam wadah.\n
            - Pastikan sampah disimpan secara merata. Sebisa mungkin ketebalan sampah setara dengan ketebalan tanah\n
            - siram dengan air yang telah bercampur EM4\n
            - Masukkan lagi tanah ke dalam wadah. Kali ini tanah berperan sebagai penutup sampah.\n
            - Tutup wadah dengan rapat dan biarkan sekitar tiga minggu.\n
            - Perhatikan hal ini saat membuat pupuk kompos sendiri di rumah:\n
            \n
            Pastikan wadah pembuat pupuk kompos tidak terkontaminasi oleh air hujan dan hewan.\n
            - Pastikan juga wadah tak terkena paparan sinar matahari.\n
            - Kalau semuanya sudah dilakukan, kini kamu bisa langsung menggunakan pupuk organik ini untuk memupuk semua jenis tanaman yang ada dipekarangan rumah.\n
        </item>
        <item>Bila sampah organik langsung dikomposkan maka produk yang diperoleh hanya pupuk organik.
            Namun bila diolah menjadi pakan, sampah tersebut dapat “dilewatkan” ke dalam perut ternak dan dapat menghasilkan daging dan pupuk organik dari kotoran ternak.
            Dengan demikian nilai tambah yang diperoleh lebih tinggi sekaligus dapat memecahkan pencemaran lingkungan dan mengatasi kekurangan pakan ternak
            Membuat pakan dari sampah dimulai dengan pemisahan sampah organik dan anorganik, dilanjutkan dengan pencacahan, fermentasi, pengeringan, penepungan, pencampuran, dan pembuatan pelet.
            Pemisahan sampah organik dari sampah anorganik dimaksudkan agar sampah yang diolah hanya yang dapat dicerna oleh ternak serta menghindarkan ternak dari mengonsumsi bahan-bahan beracun atau yang mengandung logam berat.
            Pemisahan sebaiknya dapat dilakukan di tingkat produsen sampah (pasar atau rumah tangga).
            Oleh karena itu, untuk program massal perlu disediakan tempat sampah organik dan anorganik di tingkat produsen sampah.
            Sampah dari rumah sakit dan pabrik yang banyak mengandung logam berat atau bahan beracun seyogianya dihindari.
            Sampah organik yang telah terpisah dari bahan lain selanjutnya dicacah dengan alat atau mesin pencacah agar bentuknya lebih kecil dan untuk memudahkan fermentasi.
            Fermentasi dimaksudkan untuk meningkatkan kandungan gizi dan nilai cerna sampah karena kandungan gizi sampah umumnya rendah tetapi serat kasarnya relatif tinggi.
            Fermentasi dilakukan dengan menggunakan inokulan bakteri dan cara yang tepat agar diperoleh produk yang bermutu tinggi.
            Setelah difermentasi, sampah dikeringkan dengan dijemur lalu digiling hingga menjadi tepung.
            Selanjutnya tepung sampah ditambah bahan lain termasuk enzim dan diaduk dalam mesin pencampur, sehingga diperoleh pakan komplit yang sesuai dengan kebutuhan ternak.
            Apabila diperlukan, semua bahan yang sudah tercampur dibentuk pelet. Pelet pakan ternak dapat disimpan hingga 6 bulan.
            Idealnya ransum komplit diberikan sekitar 3% dari bobot hidup ternak per hari. Dengan jumlah pakan tersebut, sapi tidak lagi memerlukan HMT atau rumput.
            Namun sebagian petani ternyata masih memberikan rumput.
            Sebagai contoh, jika ternak diberi pakan komplit 1,5% dari bobot hidup per hari, peternak tinggal memberi rumput 50% dari kebutuhan semestinya.</item>
    </string-array>
    <string-array name="saran_anorganik">
        <item>Pot Bunga</item>
        <item>Botol Penyiram Tanaman</item>
        <item>Penyimpan Alat Tulis</item>
        <item>Celengan</item>
        <item>Wadah Bumbu Dapur</item>
        <item>Keranjang Sampah</item>
        <item>Logam Lembaran</item>
        <item>Tas Belanja</item>
        <item>Sarung Bantal</item>
        <item>Pita Rambut</item>
    </string-array>
</resources>