<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.home.ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:transitionName="profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/s_sampah_dikali"
            android:contentDescription="@string/PhotoNews"/>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:transitionName="name"
            app:layout_constraintEnd_toEndOf="@+id/profileImageView"
            app:layout_constraintStart_toStartOf="@+id/profileImageView"
            app:layout_constraintTop_toBottomOf="@+id/profileImageView"
            tools:text="@string/judul_berita" />

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:transitionName="description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nameTextView"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            tools:text="@string/deskripsi" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>